Se agrega estructura de la página

--- a/HTMLJSCHARTJS1/index.html
+++ b/HTMLJSCHARTJS1/index.html
@@ -74,6 +74,7 @@
       </div>
       <div id="Nuevo">
         <h3>hola</h3>
+        <a href="www.google.com" target="_blank">Enlace</a>
       </div>
     </section>
   </main>
