--- a/PROYECTO FINAL/formulario.html
+++ b/PROYECTO FINAL/formulario.html
@@ -107,7 +107,7 @@
 
 <body>
   <!-- Formulario de autoevaluación -->
-  <form id="evaluationForm">
+  <form id="evaluationForm" form class="w-50">
     <h1>Autoevaluación de Emprendedor e Innovador</h1>
 
     <!-- Pregunta 1 -->
