--- a/PROYECTO FINAL/index.html
+++ b/PROYECTO FINAL/index.html
@@ -261,16 +261,92 @@
     </script>
     <footer class="footer bg-dark text-white pt-4 pb-2 mt-5">
       <div class="container text-center">
-        <!-- Mapa del sitio -->
+        Mapa del sitio 
         <div class="mb-3">
           <a href="#" class="footer-link">Inicio</a> |
           <a href="#" class="footer-link">Nosotros</a> |
           <a href="#" class="footer-link">Servicios</a> |
           <a href="#" class="footer-link">Contacto</a>
         </div>
+        <!-- Mapa del Sitio Web -->
+        <section class="py-5 mt-5">
+          <div class="container">
+            <h3 class="text-center mb-4">Mapa del Sitio</h3>
+            <div class="row">
+              <div class="col-md-3">
+                <h5>Inicio</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#">Bienvenida</a></li>
+                  <li><a href="#carouselExampleCaptions">Carrusel</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Ruta del Emprendedor</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#pills-descripcion">Descripción</a></li>
+                  <li><a href="#pills-definiciones">Definiciones</a></li>
+                  <li><a href="#pills-porque">Por qué Emprender</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Red Emprende</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#pills-contador">Contador de Emprendimientos</a></li>
+                  <li><a href="#pills-formulario">Formulario de Habilidades</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Contactos</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#">Formulario de contacto</a></li>
+                  <li><a href="#">Redes sociales</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Mapa del Sitio Web -->
+        <!--<section class="bg-light py-5 mt-5 center">
+          <div class="container">
+            <h3 class="text-center mb-4">Mapa del Sitio</h3>
+            <div class="row">
+              <div class="col-md-3">
+                <h5>Inicio</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#">Bienvenida</a></li>
+                  <li><a href="#carouselExampleCaptions">Carrusel</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Ruta del Emprendedor</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#pills-descripcion">Descripción</a></li>
+                  <li><a href="#pills-definiciones">Definiciones</a></li>
+                  <li><a href="#pills-porque">Por qué Emprender</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Red Emprende</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#pills-contador">Contador de Emprendimientos</a></li>
+                  <li><a href="#pills-formulario">Formulario de Habilidades</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5>Contactos</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#">Formulario de contacto</a></li>
+                  <li><a href="#">Redes sociales</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>-->
+
     
         <!-- Redes sociales -->
-        <div class="mb-3">
+        <div class="mb-3 center">
           <a href="#" target="_blank" class="footer-icon"><i class="bi bi-facebook"></i></a>
           <a href="#" target="_blank" class="footer-icon"><i class="bi bi-instagram"></i></a>
           <a href="#" target="_blank" class="footer-icon"><i class="bi bi-youtube"></i></a>
