--- a/PROYECTO FINAL/index.html
+++ b/PROYECTO FINAL/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#">Ruta del Emprendedor</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Red Emprende</a>
+                        <a class="nav-link" href="red-emprende.html">Red Emprende</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Contactos</a>
