--- a/PROYECTO FINAL/red-emprende.html
+++ b/PROYECTO FINAL/red-emprende.html
@@ -142,11 +142,17 @@
           <div class="tab-pane fade show active" id="pills-descripcion" role="tabpanel" aria-labelledby="pills-descripcion-tab">
             <div class="row align-items-center mt-4">
               <div class="col-md-6">
-                <p>🌟 <strong>¡Haz parte de la red que conecta los emprendimientos del eje cafetero!</strong> 
-                <p>La Red Ejemprende es una comunidad colaborativa de emprendedores, instituciones y aliados estratégicos comprometidos con el fortalecimiento del ecosistema emprendedor en el Eje Cafetero colombiano. Su objetivo principal es conectar, visibilizar y apoyar iniciativas de emprendimiento que promuevan el desarrollo económico, social y cultural de la región. A través de espacios de formación, redes de apoyo, ferias, eventos y asesorías especializadas, la Red impulsa ideas de negocio sostenibles, innovadoras y con impacto territorial. Ejemprende es más que una plataforma: es una red viva donde los sueños de emprender encuentran aliados, recursos y acompañamiento.</p>
-              </div>
+                    <div class="recuadro-texto">
+                        <p>🌟 <strong>¡Haz parte de la red que conecta los emprendimientos del eje cafetero!</strong> 
+                        <p>La Red Ejemprende es una comunidad de colaboración y apoyo mutuo que reúne a emprendedores, instituciones educativas, entidades públicas y privadas, organizaciones sociales y ciudadanos interesados en fortalecer el ecosistema emprendedor del Eje Cafetero colombiano. Esta red nace con el propósito de conectar personas, ideas y recursos para potenciar el desarrollo económico y social de la región a través del impulso a iniciativas sostenibles, innovadoras y con sentido territorial.
+
+                            <br> <br>A través de la Red Ejemprende, los emprendedores pueden acceder a espacios de formación, asesoría personalizada, ferias, convocatorias, mentorías y eventos de networking que les permiten consolidar sus proyectos y generar alianzas estratégicas. Además, la red busca visibilizar historias inspiradoras, promover buenas prácticas y facilitar el intercambio de conocimientos entre los actores del ecosistema, fomentando una cultura de colaboración y crecimiento colectivo.
+                            
+                            <br><br>Más allá de una plataforma digital, Ejemprende es un tejido humano y territorial que refleja la fuerza creativa y resiliente del Eje Cafetero. Es un espacio donde las ideas encuentran apoyo, donde los retos se enfrentan en comunidad y donde el emprendimiento se convierte en una herramienta de transformación local. Ser parte de la Red Ejemprende es apostar por una región más próspera, solidaria e innovadora.</p>
+                    </div>
+                </div>
               <div class="col-md-6 text-center">
-                <img src="./imagenes/IMAGEN-1.JPEG" alt="Descripción" class="img-fluid rounded shadow">
+                <img src="./imagenes/redejemprende.png" alt="Descripción" class="img-fluid rounded shadow">
               </div>
             </div>
           </div>
@@ -163,7 +169,9 @@
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <img class="imagen-testimonios" src="imagenes/testimonio1.png" alt="Sabores de mi tierra">
-                        <br><strong>Mi nombre es Lina Marcela Ramírez, soy de Santa Rosa de Cabal y hace tres años fundé Sabores de Mi Tierra</strong> , un pequeño restaurante familiar que resalta la cocina tradicional del Eje Cafetero. Gracias al apoyo de la Red Ejemprende pude participar en una feria gastronómica en Pereira, donde logré dar a conocer nuestros platos típicos como la mazamorra chiquita, el mondongo y los envueltos de mazorca. Hoy tenemos una clientela fiel, turistas que buscan una experiencia auténtica y campesinos que se sienten en casa.
+                        <div class="recuadro-texto">
+                            <strong>Mi nombre es Lina Marcela Ramírez, soy de Santa Rosa de Cabal y hace tres años fundé Sabores de Mi Tierra</strong> , un pequeño restaurante familiar que resalta la cocina tradicional del Eje Cafetero. Gracias al apoyo de la Red Ejemprende pude participar en una feria gastronómica en Pereira, donde logré dar a conocer nuestros platos típicos como la mazamorra chiquita, el mondongo y los envueltos de mazorca. Hoy tenemos una clientela fiel, turistas que buscan una experiencia auténtica y campesinos que se sienten en casa.
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -176,7 +184,9 @@
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <img class="imagen-testimonios" src="imagenes/testimonio2.png" alt="Rutas del alma">
-                        <br><strong>Soy Daniel Muñoz, guía turístico certificado y creador de Rutas del Alma</strong>, una empresa que ofrece experiencias ecoturísticas en los paisajes cafeteros de Salento y Filandia. Gracias a los talleres de Ejemprende, aprendí sobre marketing digital y diseño de paquetes turísticos sostenibles. Hoy contamos con alianzas con posadas rurales, promovemos el turismo responsable y hemos recibido visitantes de más de diez países. Ejemprende fue mi punto de partida para profesionalizar mi sueño.
+                        <div class="recuadro-texto">
+                            <strong>Soy Daniel Muñoz, guía turístico certificado y creador de Rutas del Alma</strong>, una empresa que ofrece experiencias ecoturísticas en los paisajes cafeteros de Salento y Filandia. Gracias a los talleres de Ejemprende, aprendí sobre marketing digital y diseño de paquetes turísticos sostenibles. Hoy contamos con alianzas con posadas rurales, promovemos el turismo responsable y hemos recibido visitantes de más de diez países. Ejemprende fue mi punto de partida para profesionalizar mi sueño.
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -189,8 +199,10 @@
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <img class="imagen-testimonios" src="imagenes/testimonio3.png" alt="Rutas del alma">
-                        <p><br><strong>Me llamo Laura Sánchez, soy ingeniera electrónica de Manizales y fundadora de CafiTech,</strong> una startup que desarrolla sensores inteligentes para monitorear cultivos de café. Al vincularme con la Red Ejemprende, encontré mentores clave, inversionistas ángeles y participé en una convocatoria de innovación agroindustrial. Hoy nuestros dispositivos se usan en fincas cafeteras de Caldas, y estamos trabajando en una app que permitirá a los caficultores tomar decisiones basadas en datos en tiempo real.</p>
-                    </div>
+                        <div class="recuadro-texto">
+                            <strong>Me llamo Laura Sánchez, soy ingeniera electrónica de Manizales y fundadora de CafiTech,</strong> una startup que desarrolla sensores inteligentes para monitorear cultivos de café. Al vincularme con la Red Ejemprende, encontré mentores clave, inversionistas ángeles y participé en una convocatoria de innovación agroindustrial. Hoy nuestros dispositivos se usan en fincas cafeteras de Caldas, y estamos trabajando en una app que permitirá a los caficultores tomar decisiones basadas en datos en tiempo real.
+                        </div>
+                        </div>
                   </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
@@ -201,8 +213,10 @@
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                           <img class="imagen-testimonios" src="imagenes/testimonio4.png" alt="Rutas del alma">
-                          <br><strong>Soy María del Pilar Gómez, una emprendedora de Armenia que desde hace cinco años elabora productos cosméticos con ingredientes naturales como café, cacao y miel.</strong> Mi marca, Raíces Naturales, surgió como un homenaje a las recetas ancestrales de cuidado personal. Al unirme a Ejemprende, participé en ruedas de negocio y recibí asesoría para certificar mis productos. Hoy distribuyo a nivel nacional y tengo una tienda virtual activa. La red me ayudó a transformar una idea en un proyecto con identidad propia.
-                      </div>
+                          <div class="recuadro-texto">
+                            <strong>Soy María del Pilar Gómez, una emprendedora de Armenia que desde hace cinco años elabora productos cosméticos con ingredientes naturales como café, cacao y miel.</strong> Mi marca, Raíces Naturales, surgió como un homenaje a las recetas ancestrales de cuidado personal. Al unirme a Ejemprende, participé en ruedas de negocio y recibí asesoría para certificar mis productos. Hoy distribuyo a nivel nacional y tengo una tienda virtual activa. La red me ayudó a transformar una idea en un proyecto con identidad propia.
+                        </div>
+                    </div>
                 </div>
                 </div>
               </div>
