--- a/PROYECTO FINAL/index.html
+++ b/PROYECTO FINAL/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="./ruta-del-emprendedor.html">Ruta del Emprendedor</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Red Emprende</a>
+                        <a class="nav-link" href="./red-emprende.html">Red Emprende</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">Contactos</a>
