--- a/PROYECTO FINAL/index.html
+++ b/PROYECTO FINAL/index.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <!-- Aquí agregamos el clima -->
                       <li class="nav-item">
-                        <span id="clima" class="nav-link">p
+                        <span id="clima" class="nav-link">
                             <img id="clima-icono" src="" alt="Ícono del clima" width="30" height="30">
                             Cargando clima...
                         </span>
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="./ruta-del-emprendedor.html">Ruta del Emprendedor</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Red Emprende</a>
+                        <a class="nav-link" href="red-emprende.html">Red Emprende</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">Contactos</a>
