--- a/PROYECTO FINAL/red-emprende.html
+++ b/PROYECTO FINAL/red-emprende.html
@@ -276,6 +276,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
     </script>
 
+<div id="contadorRegistros" class="contador-icono">
+  <div class="contador-texto">
+    <span id="contadorValor">0</span>
+    <small>Emprendimientos<br>registrados</small>
+  </div>
+  <img src="https://cdn-icons-png.flaticon.com/512/747/747545.png" alt="icono contador" />
+</div>
+
 <footer class="footer bg-dark text-white pt-4 pb-2 mt-5">
   <div class="container text-center">
     Mapa del sitio
